5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4061/executions/1642_651.log
== TEST (2019-04-16 22:01:06) 
-- CODE:
altura = input("digite altura: ")
sexo = input("digite sexo: ")
homens = (72.7*altura)-58
mulheres = (62.1*altura)-44.7

if(sexo==M==homens):
	mensagem = ("peso ideal")
else:
	mensagem = ("peso ideal")

print(round(mensagem, 2))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    homens = (72.7*altura)-58
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 22:01:33) 
-- CODE:
altura = input("digite altura: ")
sexo = input("digite sexo: ")

homens = (72.7*altura)-58
mulheres = (62.1*altura)-44.7

if(sexo==M==homens):
	mensagem = ("peso ideal")
else:
	mensagem = ("peso ideal")

print(round(mensagem, 2))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    homens = (72.7*altura)-58
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 22:03:05) 
-- CODE:
altura = float(input("digite altura: "))
sexo = input("digite sexo: ")

homens = (72.7*altura)-58
mulheres = (62.1*altura)-44.7

if(sexo==M==homens):
	mensagem = ("peso ideal")
else:
	mensagem = ("peso ideal")

print(round(mensagem, 2))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(sexo==M==homens):
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 21:12:48) 
-- CODE:
altura = float(input("digite altura: "))
sexo = input("digite sexo: ")

homens = (72.7*altura)-58
mulheres = (62.1*altura)-44.7

if(sexo==M==homens):
	mensagem = ("peso ideal")
else:
	mensagem = ("peso ideal")

print(round(mensagem, 2))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(sexo==M==homens):
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 21:27:42) 
-- CODE:
altura = float(input("digite altura: "))
sexo = input("digite sexo: ")

homens = (72.7*altura)-58
mulheres = (62.1*altura)-44.7

if():
	mensagem = (72.7*altura)-58
else:
	mensagem = (62.1*altura)-44.7

print(round(mensagem, 2))
			
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 21:32:43) 
-- CODE:
altura = float(input("digite altura: "))
sexo = input("digite sexo: ")

homens = (72.7*altura)-58
mulheres = (62.1*altura)-44.7

if(homens!= mulheres):
	mensagem = (72.7*altura)-58
else:
	mensagem = (62.1*altura)-44.7

print(round(mensagem, 2))
			
-- OUTPUT:
14.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 21:33:16) 
-- CODE:
altura = float(input("digite altura: "))
sexo = input("digite sexo: ")

homens = (72.7*altura)-58
mulheres = (62.1*altura)-44.7

if(homens!= mulheres):
	mensagem = (72.7*altura)-58
else:
	mensagem = (62.1*altura)-44.7

print(round(mensagem, 2))
			
-- EXECUTION TIME:
0.152727
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
14.7
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 21:33:28) 
-- CODE:
altura = float(input("digite altura: "))
sexo = input("digite sexo: ")

homens = (72.7*altura)-58
mulheres = (62.1*altura)-44.7

if(homens!= mulheres):
	mensagem = (72.7*altura)-58
else:
	mensagem = (62.1*altura)-44.7

print(round(mensagem, 2))
			
-- OUTPUT:
14.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 21:33:55) 
-- CODE:
altura = float(input("digite altura: "))
sexo = input("digite sexo: ")

homens = (72.7*altura)-58
mulheres = (62.1*altura)-44.7

if(homens!= mulheres):
	mensagem = (72.7*altura)-58
else:
	mensagem = (62.1*altura)-44.7

print(round(mensagem, 2))
			
-- OUTPUT:
14.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 21:34:13) 
-- CODE:
altura = float(input("digite altura: "))
sexo = input("digite sexo: ")

homens = (72.7*altura)-58
mulheres = (62.1*altura)-44.7

if(homens!= mulheres):
	mensagem = (72.7*altura)-58
else:
	mensagem = (62.1*altura)-44.7

print(round(mensagem, 2))
			
-- EXECUTION TIME:
0.132171
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
14.7
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 14:20:11) 
-- CODE:
altura = float(input("digite altura: "))
sexo = input("digite sexo: ")

homens = (72.7*altura)-58
mulheres = (62.1*altura)-44.7

if(sexo=="M"):
	mensagem = homens
else:
	mensagem = mulheres

print(round(mensagem, 2))
			
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 14:20:29) 
-- CODE:
altura = float(input("digite altura: "))
sexo = input("digite sexo: ")

homens = (72.7*altura)-58
mulheres = (62.1*altura)-44.7

if(sexo=="M"):
	mensagem = homens
else:
	mensagem = mulheres

print(round(mensagem, 2))
			
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-18 14:20:55) 
-- CODE:
altura = float(input("digite altura: "))
sexo = input("digite sexo: ")

homens = (72.7*altura)-58
mulheres = (62.1*altura)-44.7

if(sexo=="M"):
	mensagem = homens
else:
	mensagem = mulheres

print(round(mensagem, 2))
			
-- EXECUTION TIME:
0.119436
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
